--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta content='minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no' name='viewport'/>
     <!-- <meta content='#0A8FDC' name='theme-color' /> -->
     <!-- <link href='%PUBLIC_URL%/logo.png' rel='apple-touch-icon' /> -->
-<!--    <link rel="icon" href="%PUBLIC_URL%/logo-title.png">-->
+    <link rel="icon" href="%PUBLIC_URL%/logo-title.png">
     <meta content='Sirius Tech Admin panel' name='description'/>
     <!-- <meta property='og:image' content='%PUBLIC_URL%/logo512.png' /> -->
     <!-- <meta property='og:site_name' content='Tashkent Market Admin panel' /> -->
